<resources>


    <!--Error messages-->
    <string name="email_error">Please enter valid Email</string>
    <string name="password_error">Please enter valid Password</string>
    <string name="confirm_password_error">Please enter valid Confirm Password</string>
    <string name="password_match_error">New Password and Confirm Password does not match</string>
    <string name="password_criteria">Password should contain one alphabet,number and special character.Min 8 and Max 12 characters.</string>
    <string name="first_name_error">Please enter First Name</string>
    <string name="last_name_error">Please enter Last Name</string>
    <string name="otp_error">Please enter OTP received</string>
    <string name="phone_error">Please enter valid Phone Number</string>
    <string name="general_error_server">Error in processing request. Please try later</string>
    <string name="network_error">Unable to detect internet. Make sure you are connected to internet or WiFi</string>
    <string name="already_registered">Seems to be you have already registered with us. Pls try to login with your registered credentials</string>
    <string name="forgot_pass_status_msg">We have sent a mail to the registered Email. Pls follow the instructions. </string>
    <!--Error messages end-->


    <string name="app_name">App</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="app_title">Mr Wash</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">My Profile</string>
    <string name="action_orders">My Orders</string>
    <string name="action_price_list">Price List</string>
    <string name="action_offers">Offers</string>
    <string name="action_faq">FAQ</string>
    <string name="action_contact_us">Contact Us</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="forgot_password">Forgot Password ? </string>
    <string name="otp_text1">An OTP has been sent your Email ID</string>
    <string name="otp_text2">Please enter the 4 digit OTP</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="change_email_id">Change Email ID</string>
    <string name="title">Title</string>
    <string name="place_order">Place Order</string>
    <string name="price_list">Price List</string>
    <string name="percentage">%</string>
    <string name="off">OFF</string>
    <string name="offer_validity">OFFER VALID FOR FIRST TWO MONTHS</string>
    <string name="place_order_title">Place Order</string>
    <string name="service_type">Service Type</string>
    <string name="pickup_time">Pickup time</string>
    <string name="delivery_time">Delivery time</string>
    <string name="houseflat">House No/ Flat</string>
    <string name="promo_code">Promo Code</string>
    <string name="location">Location</string>
    <string name="landmark">Landmark</string>
    <string name="confirm">Confirm</string>
    <string name="exit_confirm">Do you want to exit MrWash?</string>
    <string name="ok">OK</string>
    <string name="opt_sent_to">OTP has been sent to &#160;&#160;</string>
    <string name="login_redirect">Password changed successfully. You will be redirected to Login. Pls login with your new credentials</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="submit">Submit</string>
    <string name="enter_otp">OTP</string>

    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>

    <!--dummy text-->
    <string name="dummy_name">Mr Farook</string>
    <string name="dummy_phone">83903815</string>
    <string name="dummy_email">farook@gmail.com</string>
    <string name="user_blocked">Seems to be you have been blocked by our admin. Pls contact MrWash support for further assistance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tapmap_for_location">Click on Map for tagging location with current order</string>
    <string name="pick_up_time">Pick Up Time</string>
    <string name="within_24_hrs">Within 24 hrs</string>
    <string name="faq">FAQ</string>
    <string name="edit">Edit</string>
    <string name="profile_updated">Updated your profile successfully</string>
    <string name="call_us">Call us</string>
    <string name="done">Done</string>
    <string name="gps_network_not_enabled">Location is not enabled</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="pick_condition_1">Delivery time should be after pick up time !</string>
    <string name="apply">Apply</string>
    <string name="your_order_has_been_placed">Your Order</string>
    <string name="has_been_placed">has been placed</string>
    <string name="customer_service_contact">Our customer service will contact you shortly</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="order_under_process">Order Under Processing</string>
    <string name="no_orders_yet">No orders made till now</string>
    <string name="order_number">Order# :</string>
    <string name="order_date">Order Date :</string>
    <string name="order_status">Order Status :</string>
    <string name="item">Item</string>
    <string name="count">Count</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="qr_currency">QR</string>


</resources>
