<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/action_profile" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/order"
            android:title="@string/action_orders" />
        <item
            android:id="@+id/nav_price"
            android:icon="@drawable/pricelist"
            android:title="@string/action_price_list" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/offers"
            android:title="@string/action_offers" />

        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/faq"
            android:title="@string/action_faq" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contactus"
            android:title="@string/action_contact_us" />
    </group>
<!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
