<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/registration_fields"
    android:layout_alignParentTop="true"
    android:layout_marginRight="@dimen/screen_margin"
    android:layout_marginLeft="@dimen/screen_margin"
    >

    <!--<ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registration_fields"
        android:layout_alignParentTop="true"
        >-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="@dimen/component_margin"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:focusedByDefault="true"
                    android:hint="@string/first_name"
                    android:imeOptions="actionNext"
                    android:inputType="textAutoComplete"
                    android:maxLength="30"
                    android:textColor="@color/text_color"
                    android:text="FN"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/component_margin"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/last_name"
                    android:imeOptions="actionNext"
                    android:inputType="textAutoComplete"
                    android:maxLength="30"
                    android:textColor="@color/text_color"
                    android:text="LN"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/component_margin"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/phone"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:maxLength="13"
                    android:textColor="@color/text_color"
                    android:text="88888888"
                    />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/component_margin"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:textColor="@color/text_color"
                    android:text="a@amail.com"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLength="12"
                    android:textColor="@color/text_color"
                    android:text="A1a#msksksksk"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/registration_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppButtonTheme"
                android:background="@drawable/button_bg_rounded_corners"
                android:text="@string/register"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_13"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="@dimen/component_margin_25"
                android:layout_marginRight="@dimen/component_margin_25"
                android:layout_marginBottom="@dimen/component_margin_10"
                />
        </LinearLayout>

    <!--</ScrollView>-->



</ScrollView>
