<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

    <ProgressBar
        android:id="@+id/progressBarLoading"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_gravity="center_horizontal|center_vertical"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/screen_margin"
        android:layout_marginLeft="@dimen/screen_margin"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginBottom="@dimen/component_margin"
            android:layout_marginTop="@dimen/component_margin"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:text=""
            android:layout_marginBottom="@dimen/component_margin"
            android:clickable="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_us"
            android:layout_marginBottom="@dimen/component_margin"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phone_num"
            android:text=""
            android:layout_marginBottom="@dimen/component_margin"
            android:clickable="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_contact_us"
            android:layout_marginBottom="@dimen/component_margin"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contact_address"
            android:text=""
            android:layout_marginBottom="@dimen/component_margin"
            android:clickable="true"
            />

    </LinearLayout>
</FrameLayout>